discussion/kv_engine/168587/168587_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including probabilistic_counter.h

probabilistic_counter.h is included by hash_table.h (as HashTable
includes a ProbabilisticCounter member), and hash_table.h is itself
included by many other files.

probabilistic_counter.h is relatively expensive to include, as while
it is very small it includes <random> which costs ~135ms.

Move the function which actually requires <random> into it's own .cc
file. This reduces the cost of including probabilistic_counter.h - so
much so that probabilistic_counter.h is no longer listed in the top
headers, so using a header which includes it as proxy to measure the
improvement.

before:

    19130 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 248 ms)

after:

    7755 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 100 ms)

Change-Id: Ic6098e90ed1ee2e86cda4310754b14cf8c87de0a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:49:02.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 16:47:25.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14775/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:97:22: error: unknown type name "uint16_t" [clang-diagnostic-error]
    bool isSaturated(uint16_t counter) const {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14775/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:97:22:
error: unknown type name "uint16_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36231/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/probabilistic_counter.h:97:22:
error: unknown type name "uint16_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36231/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4421/ : FAILURE

Compile error at [2022-01-12T16:19:06.321Z] ../kv_engine/engines/ep/src/probabilistic_counter.h:97:22:
error: unknown type name "uint16_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4421/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13621/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42756/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24853/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15582/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16440/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16731/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17527/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
